.omo/evidence/controller-webhook-split-deployment/split/live-split-20260728004000/admission-mutating-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: "2026-07-27T16:11:52Z"
  generation: 1
  name: echo-operator.echo-smoke-split-live-split-20260728004000.echo.example.com
  resourceVersion: "2239190"
  uid: c7d6efb9-adf3-45d3-b398-684f134d4908
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURFVENDQWZtZ0F3SUJBZ0lVRy92WCtKTXFOWWljV0c2bEpBcWNKczZQR3Njd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dERVdNQlFHQTFVRUF3d05aV05vYnkxemJXOXJaUzFqWVRBZUZ3MHlOakEzTWpjeE5qRXhORGhhRncweQpOakEzTWpneE5qRXhORGhhTUJneEZqQVVCZ05WQkFNTURXVmphRzh0YzIxdmEyVXRZMkV3Z2dFaU1BMEdDU3FHClNJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNLN1dCUlkrYlJYNWx0SVNlRTFrcFJPeUduTDhGdFpUTDYKNlQxZjlvdUNFQWxsRU80VTNDWHJ0UE9mdml6TitWQkVvTlJrakJzczlCMGtyVG1uRVZ5Z3NkaUxDSzFCZlFkeQpUZ0dDb1VxNldBZV [...]
    service:
      name: echo-smoke-split-live-split-20260728004000-echo-operator
      namespace: echo-smoke-split-live-split-20260728004000
      path: /mutate/echo.example.com
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: echo-operator.echo-smoke-split-live-split-20260728004000.echo.example.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - example.com
    apiVersions:
    - v1alpha1
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - echoresources
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 10
